fix: align

--- a/src/components/Navs/styles.module.css
+++ b/src/components/Navs/styles.module.css
@@ -11,6 +11,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 1.6875rem;
 }
 
